feat(profile): implements add and delete endpoints for candidate projects
