# api/src/main/resources/static/openapi.yml
@@ -138,6 +138,24 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/BaseResponseVoid"
+  /api/v1/profile/projects:
+    post:
+      tags:
+      - user-profile-controller
+      operationId: addProjects
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/ProjectRequest"
+        required: true
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/BaseResponseCandidateProfileResponse"
   /api/v1/profile/links:
     post:
       tags:
@@ -621,6 +639,25 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/BaseResponseListCityResponse"
+  /api/v1/profile/projects/{projectId}:
+    delete:
+      tags:
+      - user-profile-controller
+      operationId: deleteProject
+      parameters:
+      - name: projectId
+        in: path
+        required: true
+        schema:
+          type: string
+          format: uuid
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/BaseResponseCandidateProfileResponse"
   /api/v1/profile/links/{linkId}:
     delete:
       tags:
@@ -861,13 +898,21 @@ components:
           type: string
         cnpj:
           type: string
-    LinkItemRequest:
+    ProjectRequest:
       type: object
       properties:
         name:
           type: string
-        url:
+        description:
           type: string
+        projectUrl:
+          type: string
+        startDate:
+          type: string
+          format: date
+        endDate:
+          type: string
+          format: date
     AddressResponse:
       type: object
       properties:
@@ -1051,21 +1096,6 @@ components:
         endDate:
           type: string
           format: date
-        technologies:
-          type: array
-          items:
-            $ref: "#/components/schemas/TechnologyResponse"
-          uniqueItems: true
-    TechnologyResponse:
-      type: object
-      properties:
-        id:
-          type: integer
-          format: int32
-        name:
-          type: string
-        category:
-          type: string
     UserResponse:
       type: object
       properties:
@@ -1084,6 +1114,13 @@ components:
         documentType:
           type: string
         documentNumber:
+          type: string
+    LinkItemRequest:
+      type: object
+      properties:
+        name:
+          type: string
+        url:
           type: string
     CandidateLanguageRequest:
       type: object
@@ -1391,6 +1428,16 @@ components:
             $ref: "#/components/schemas/TechnologyResponse"
         error:
           $ref: "#/components/schemas/ErrorResponse"
+    TechnologyResponse:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int32
+        name:
+          type: string
+        category:
+          type: string
     BaseResponseListStateResponse:
       type: object
       properties:
